[package]
name = "p3"
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytes = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.5.54"
dotenvy = "0.15.7"
hostname = "0.3.1"
jwt = { version = "0.16.0", features = ["openssl"] }
keyed_priority_queue = "0.4.1"
tokio.workspace = true
tokio-util.workspace = true
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs.git", version = "0.2.0", features = [
  "tracing",
  "version",
] }
tracing = "0.1.41"
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
ed25519-dalek = { workspace = true }
dashmap ={ workspace = true}
futures = { workspace = true }
histogram = { workspace = true }
jito-protos = { workspace = true}
log = { workspace = true }
openssl = { workspace = true }
paladin-lockup-program = {workspace = true}
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
solana-perf = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
solana-metrics = { workspace = true }
smpl_jwt = { workspace = true }
spl-discriminator = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["rustc", "cargo"] }
