[package]
name = "p3"
version = "0.1.0"
repository = "https://github.com/paladin-bladesmith/p3-cli.git"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytes = "1.10"
bytemuck = "1.23.0"
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.5.54"
crossbeam-channel = "0.5.15"
dashmap = "5.5.3"
dotenvy = "0.15.7"
ed25519-dalek = "=1.0.1"
futures = "0.3.31"
histogram = "0.6.9"
hostname = "0.3.1"
jito-protos = { path = "../jito-protos" }
jwt = { version = "0.16.0", features = ["openssl"] }
keyed_priority_queue = "0.4.1"
log = "0.4.27"
openssl = "0.10"
p3-quic = { path = "../p3-quic", features = ["solana-client"] }
paladin-lockup-program = { path = "../paladin-programs/lockup/program" }
prost = "0.11.9"
prost-types = "0.11.9"
rand = "0.8.5"
serde = "1.0.219"
smpl_jwt = "0.7.1"
solana-client = { path = "../client" }
solana-metrics = { path = "../metrics" }
solana-perf = { path = "../perf" }
solana-sdk = "2.2.1"
solana-streamer = { path = "../streamer" }
spl-discriminator = "0.2"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.9"
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs.git", version = "0.2.0", features = [
  "tracing",
  "version",
] }
tracing = "0.1.41"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["rustc", "cargo"] }
